--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.82"
-geojson = "0.24.1"
+csv = "1.3.0"
 serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
 zstd = "0.13.1"
